--- a/public/index.html
+++ b/public/index.html
@@ -2,48 +2,22 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
-    <style>
-      body { background-color: #F2F6D0 }
-      #wrapper {
-        width: 960px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 5%;
-      }
-      #articles {
-        display: inline-block;
-        overflow: auto;
-        width: 60%;
-        height: 700px;
-      }
-      #notes {
-        float: right;
-        width: 30%;
-      }
-      textarea, input {
-        display: block;
-        width: 100%;
-        background-color: #FCF5C7;
-      }
-      input {
-        height: 36px;
-        font-size: 24px;
-      }
-      textarea {
-        height: 200px;
-        font-size: 18px;
-      }
-    </style>
+    <title>What's the Buzz?</title>
+    <link href="https://fonts.googleapis.com/css?family=Acme|Ruslan+Display" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div id="wrapper">
-      <h1>Scrapy Scrape Buzz Scraper</h1>
-      <!-- <h2><i>If you can do this...the homework should be no problem.</i></h2> -->
+      <h1>What's the Buzz?</h1>
+     <h3>Click the button to scrape, click the article to add a note</h3>   <button class="btn btn-dark scrape" >Scrape!</button>
+      <hr>
+     
       <div id="articles"></div>
       <div id="notes"></div>
+      
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
-</html>
+</html> 
