--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>What's the Buzz?</title>
-    <link href="https://fonts.googleapis.com/css?family=Acme|Ruslan+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Luckiest+Guy" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div id="wrapper">
       <h1>What's the Buzz?</h1>
-     <h3>Click the button to scrape, click the article to add a note</h3>   <button class="btn btn-dark scrape" >Scrape!</button>
+     <h3>Go to "/scrape"  to scrape, click the article to add a note</h3>   
+     <!-- <button class="btn btn-dark scrape" >Scrape!</button> -->
       <hr>
      
       <div id="articles"></div>
       <div id="notes"></div>
       
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="app.js"></script>
   </body>
 </html> 
