heroku fix add articles

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="wrapper">
       <h1>What's the Buzz?</h1>
-     <h3>Go to "/scrape"  to scrape, click the article to add a note</h3>   
+     <h3>Go to "/scrape" to scrape then delete the scrape to go back to home, click the article to add a note</h3>   
      <!-- <button class="btn btn-dark scrape" >Scrape!</button> -->
       <hr>
      
